fixed tag spacing

--- a/assets/css/sign2mint/objects/_filter_overview.scss
+++ b/assets/css/sign2mint/objects/_filter_overview.scss
@@ -30,7 +30,7 @@
   cursor: pointer;
   width: 14px;
   height: 14px;
-  padding-right: 1rem;
+  padding: 0 1rem 0 0.5rem;
 
   background-color: rgba(0, 0, 0, 0);
   svg {
